# primate-sim

./: .gitignore  requirements.txt  run.sh
src/bfu_tests/: cpp_bfu.cpp  cpp_bfu.h  printing_bfu.cpp  pybind.cpp
src/c_model/: Makefile  output.txt  p4_parse_simple.h  p4_parse_sw.cpp  primate_numeric.h  primate_p4.h
src/cpp_sim/: CMakeLists.txt  Makefile  PrimSim
src/cpp_sim/include/: BranchUnit.hpp  Exceptions.hpp  Extract.hpp  GFU.hpp  IExecuteUnit.hpp  InstructionDecoder.hpp  MachineState.hpp  MemoryUnit.hpp  ProgramParser.hpp  Register.hpp  consts.hpp  util.hpp
src/cpp_sim/src/: InstructionDecoder.cpp  MachineState.cpp  Register.cpp  main.cpp
src/py_sim/: global_params.py  instr.py  sim.py  utils.py
